--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "@mui/base": "^5.0.0-beta.38",
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/system": "^5.15.12",
+    "@mui/x-date-pickers": "^7.2.0",
+    "@mui/x-date-pickers-pro": "^7.2.0",
     "axios": "^1.6.7",
     "chance": "^1.1.11",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.6",
     "notistack": "^3.0.1",
@@ -37,6 +42,7 @@
     "react-window": "^1.8.10",
     "react18-input-otp": "^1.1.4",
     "simplebar-react": "^3.2.4",
+    "styled-components": "^6.1.8",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.5",
     "uuid": "^9.0.1",
