--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "moment": "^2.30.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.6",
+    "next-routes": "^1.4.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-intl": "^6.6.2",
+    "react-router-dom": "^6.22.3",
     "react-timer-hook": "^3.0.7",
     "react-window": "^1.8.10",
     "react18-input-otp": "^1.1.4",
