initial route update

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ REACT_APP_GOOGLE_MAPS_API_KEY=
 REACT_APP_MAPBOX_ACCESS_TOKEN=
 
 ## Next Auth
-NEXTAUTH_URL=http://localhost:8081/
+NEXTAUTH_URL=/
 ## NEXTAUTH_URL=https://mantis-react-next-ts-codedthemes.vercel.app/
 NEXTAUTH_SECRET_KEY=LlKq6ZtYbr+hTC073mAmAh9/h2HwMfsFo4hrfCx5mLg=
 
