--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.30.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.6",
+    "next-navigation": "^1.0.6",
     "next-routes": "^1.4.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
