--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-date-pickers-pro": "^7.2.0",
     "axios": "^1.6.7",
     "chance": "^1.1.11",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
@@ -37,6 +38,7 @@
     "next-routes": "^1.4.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-date-range": "^2.0.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-intl": "^6.6.2",
