--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-timer-hook": "^3.0.7",
     "react-window": "^1.8.10",
     "react18-input-otp": "^1.1.4",
+    "sass": "^1.75.0",
     "simplebar-react": "^3.2.4",
     "styled-components": "^6.1.8",
     "stylis-plugin-rtl": "^2.1.1",
